--- a/index.html
+++ b/index.html
@@ -218,7 +218,24 @@
       <section id="apps" class="wrapper alt style2">
         <div class="inner">
 
+          <!-- WealthBoost AI (NEW) -->
           <section class="spotlight">
+            <div class="image"><img src="images/wealthboost-icon.png" alt="WealthBoost AI" class="app-icon"></div>
+            <div class="content game-card">
+              <h3>WealthBoost AI</h3>
+              <p>AI-powered money coach to build better financial habits through daily missions, progress tracking, and personalized insights.</p>
+
+              <a href="https://apps.apple.com/app/wealthboost-ai-money-coach/id6756603789" target="_blank">
+                <img src="images/app-store-badge.svg" class="app-store-badge" alt="App Store">
+              </a>
+              <a href="https://wealthboost.app/" target="_blank">
+                <img src="images/app-store-badge.svg" class="app-store-badge" alt="Website">
+              </a>
+            </div>
+          </section>
+
+          <!-- ProScan PDF (UPDATED: website button added) -->
+          <section class="spotlight reverse">
             <div class="image"><img src="images/proscan-icon.png" alt="ProScan PDF" class="app-icon"></div>
             <div class="content game-card">
               <h3>ProScan PDF</h3>
@@ -226,10 +243,13 @@
               <a href="https://apps.apple.com/app/proscan-pdf-scan-sign-ocr/id6752308731" target="_blank">
                 <img src="images/app-store-badge.svg" class="app-store-badge" alt="App Store">
               </a>
+              <a href="https://proscanpdf.com/" target="_blank">
+                <img src="images/app-store-badge.svg" class="app-store-badge" alt="Website">
+              </a>
             </div>
           </section>
 
-          <section class="spotlight reverse">
+          <section class="spotlight">
             <div class="image"><img src="images/eyecolorcam-icon.png" alt="Eye Color Cam" class="app-icon"></div>
             <div class="content game-card">
               <h3>Eye Color Cam</h3>
@@ -240,7 +260,7 @@
             </div>
           </section>
 
-          <section class="spotlight">
+          <section class="spotlight reverse">
             <div class="image"><img src="images/dashpal-icon.png" alt="Dash Pal" class="app-icon"></div>
             <div class="content game-card">
               <h3>Dash Pal</h3>
