--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
                 <img src="images/app-store-badge.svg" class="app-store-badge" alt="App Store">
               </a>
               <a href="https://wealthboost.app/" target="_blank">
-                <img src="images/app-store-badge.svg" class="app-store-badge" alt="Website">
+                <img src="images/visit-website.png" class="app-store-badge" alt="Visit Website">
               </a>
             </div>
           </section>
@@ -244,7 +244,7 @@
                 <img src="images/app-store-badge.svg" class="app-store-badge" alt="App Store">
               </a>
               <a href="https://proscanpdf.com/" target="_blank">
-                <img src="images/app-store-badge.svg" class="app-store-badge" alt="Website">
+                <img src="images/visit-website.png" class="app-store-badge" alt="Visit Website">
               </a>
             </div>
           </section>
