--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
         line-height: 1.5;
       }
 
+      /* Reuse existing sizing for BOTH new custom buttons */
       .app-store-badge { width: 150px; height: auto; transition: transform 0.2s ease; }
       .app-store-badge:hover { transform: scale(1.05); }
 
@@ -218,7 +219,7 @@
       <section id="apps" class="wrapper alt style2">
         <div class="inner">
 
-          <!-- WealthBoost AI (NEW) -->
+          <!-- WealthBoost AI -->
           <section class="spotlight">
             <div class="image"><img src="images/wealthboost-icon.png" alt="WealthBoost AI" class="app-icon"></div>
             <div class="content game-card">
@@ -226,25 +227,25 @@
               <p>AI-powered money coach to build better financial habits through daily missions, progress tracking, and personalized insights.</p>
 
               <a href="https://apps.apple.com/app/wealthboost-ai-money-coach/id6756603789" target="_blank">
-                <img src="images/app-store-badge.svg" class="app-store-badge" alt="App Store">
+                <img src="images/downloadappstore-button.png" class="app-store-badge" alt="Download on the App Store">
               </a>
               <a href="https://wealthboost.app/" target="_blank">
-                <img src="images/visit-website.png" class="app-store-badge" alt="Visit Website">
+                <img src="images/visitwebsite-button.png" class="app-store-badge" alt="Visit Website">
               </a>
             </div>
           </section>
 
-          <!-- ProScan PDF (UPDATED: website button added) -->
+          <!-- ProScan PDF -->
           <section class="spotlight reverse">
             <div class="image"><img src="images/proscan-icon.png" alt="ProScan PDF" class="app-icon"></div>
             <div class="content game-card">
               <h3>ProScan PDF</h3>
               <p>Newest cutting-edge AI-powered mobile camera scanning app. Scan, Edit, Sign, Lock, OCR & more. No ads, no watermarks. Exactly how a pro scanning app should be.</p>
               <a href="https://apps.apple.com/app/proscan-pdf-scan-sign-ocr/id6752308731" target="_blank">
-                <img src="images/app-store-badge.svg" class="app-store-badge" alt="App Store">
+                <img src="images/downloadappstore-button.png" class="app-store-badge" alt="Download on the App Store">
               </a>
               <a href="https://proscanpdf.com/" target="_blank">
-                <img src="images/visit-website.png" class="app-store-badge" alt="Visit Website">
+                <img src="images/visitwebsite-button.png" class="app-store-badge" alt="Visit Website">
               </a>
             </div>
           </section>
@@ -255,7 +256,7 @@
               <h3>Eye Color Cam</h3>
               <p>Transform your eye color instantly with AR! Choose from 30 stunning shades and textures to create your perfect look with realistic color changes.</p>
               <a href="https://apps.apple.com/app/eye-color-cam-live-filters/id6752640752" target="_blank">
-                <img src="images/app-store-badge.svg" class="app-store-badge" alt="App Store">
+                <img src="images/downloadappstore-button.png" class="app-store-badge" alt="Download on the App Store">
               </a>
             </div>
           </section>
@@ -266,7 +267,7 @@
               <h3>Dash Pal</h3>
               <p>Your all-in-one motion dashboard. Whether you're driving, cycling, flying, sailing, or walking, Dash Pal turns your iPhone into a live dashboard that adapts to every journey.</p>
               <a href="https://apps.apple.com/ro/app/dash-pal-gps-speedometer/id6753625350" target="_blank">
-                <img src="images/app-store-badge.svg" class="app-store-badge" alt="App Store">
+                <img src="images/downloadappstore-button.png" class="app-store-badge" alt="Download on the App Store">
               </a>
             </div>
           </section>
@@ -284,7 +285,7 @@
               <h3>NeuraRush</h3>
               <p>Brain Boost Games - 15 Brain-Boosting Mini Games that challenge memory, reflexes and problem-solving abilities.</p>
               <a href="https://apps.apple.com/app/neurarush-brain-boost-games/id6746837300" target="_blank">
-                <img src="images/app-store-badge.svg" class="app-store-badge" alt="App Store">
+                <img src="images/downloadappstore-button.png" class="app-store-badge" alt="Download on the App Store">
               </a>
             </div>
           </section>
@@ -295,7 +296,7 @@
               <h3>Cyphre</h3>
               <p>Puzzle Ring Challenge - Think. Align. Unlock. Addictive symbol decoder that challenges your brain.</p>
               <a href="https://apps.apple.com/app/cyphre-puzzle-ring-challenge/id6748257455" target="_blank">
-                <img src="images/app-store-badge.svg" class="app-store-badge" alt="App Store">
+                <img src="images/downloadappstore-button.png" class="app-store-badge" alt="Download on the App Store">
               </a>
             </div>
           </section>
@@ -306,7 +307,7 @@
               <h3>Pop Pop Aliens</h3>
               <p>Arcade Hunter - Fast-paced alien blasting action with increasing difficulty, clever decoys, and endless entertainment.</p>
               <a href="https://apps.apple.com/app/pop-pop-aliens-arcade-hunter/id6748736031" target="_blank">
-                <img src="images/app-store-badge.svg" class="app-store-badge" alt="App Store">
+                <img src="images/downloadappstore-button.png" class="app-store-badge" alt="Download on the App Store">
               </a>
             </div>
           </section>
@@ -317,7 +318,7 @@
               <h3>Pop Pop Piggies</h3>
               <p>Whack-a-piggie mayhem with tricky decoys and lightning-fast action. Test your reflexes and avoid the sneaky impostors!</p>
               <a href="https://apps.apple.com/app/pop-pop-piggies-arcade-hunter/id6748965914" target="_blank">
-                <img src="images/app-store-badge.svg" class="app-store-badge" alt="App Store">
+                <img src="images/downloadappstore-button.png" class="app-store-badge" alt="Download on the App Store">
               </a>
             </div>
           </section>
@@ -328,7 +329,7 @@
               <h3>Bouncy Fruits</h3>
               <p>Smash the bouncing fruits while avoiding tricky decoys! Master combos, use shields, and level up through stunning visuals and immersive audio.</p>
               <a href="https://apps.apple.com/app/bouncy-fruits-tap-smash-frenzy/id6751171271" target="_blank">
-                <img src="images/app-store-badge.svg" class="app-store-badge" alt="App Store">
+                <img src="images/downloadappstore-button.png" class="app-store-badge" alt="Download on the App Store">
               </a>
             </div>
           </section>
@@ -339,7 +340,7 @@
               <h3>Pop Pop Fruits</h3>
               <p>Pop the Fruits with blazing speed, but avoid the crafty decoys! Dive into a fruit popping frenzy that will test your speed and precision!</p>
               <a href="https://apps.apple.com/app/pop-pop-fruits-tap-frenzy/id6749312011" target="_blank">
-                <img src="images/app-store-badge.svg" class="app-store-badge" alt="App Store">
+                <img src="images/downloadappstore-button.png" class="app-store-badge" alt="Download on the App Store">
               </a>
             </div>
           </section>
