--- a/index.html
+++ b/index.html
@@ -222,16 +222,16 @@
       <section id="about" class="wrapper style1 special">
         <div class="inner">
           <header class="major">
-            <h2>Crafting Mobile Gaming Experiences & Utility Apps</h2>
-            <p>From mind-bending puzzles to fast-paced arcade action, each game is designed<br />
-            to provide hours of entertainment and challenge players worldwide.<br /><br />
-            Beyond gaming, I also develop practical utility apps that solve real-world problems,<br />
-            bringing professional-grade tools to your mobile device for enhanced productivity.</p>
+            <h2>BUILDING SMART UTILITY APPS &amp; ADDICTIVE GAMES</h2>
+            <p>
+              I build polished iOS utility apps that help people move faster: build wealth, scan documents, track progress, and get more done with less effort.<br />
+              When it’s time to play, I craft quick, satisfying games designed to sharpen reflexes, challenge the brain, and keep every session fun.
+            </p>
           </header>
           <ul class="icons major">
-            <li><span class="icon fa-gem major style1"><span class="label">Quality</span></span></li>
-            <li><span class="icon fa-heart major style2"><span class="label">Passion</span></span></li>
-            <li><span class="icon solid fa-code major style3"><span class="label">Innovation</span></span></li>
+            <li><span class="icon solid fa-code major style1"><span class="label">Coding</span></span></li>
+            <li><span class="icon solid fa-mobile-alt major style2"><span class="label">Mobile</span></span></li>
+            <li><span class="icon solid fa-rocket major style3"><span class="label">Innovation</span></span></li>
           </ul>
         </div>
       </section>
