--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
 
           <!-- WealthBoost AI -->
           <section class="spotlight">
-            <div class="image"><img src="images/wealthboost-icon.png" alt="WealthBoost AI" class="app-icon"></div>
+            <div class="image"><img src="images/wealthboostappicon.png" alt="WealthBoost AI" class="app-icon"></div>
             <div class="content game-card">
               <h3>WealthBoost AI</h3>
               <p>AI-powered money coach to build better financial habits through daily missions, progress tracking, and personalized insights.</p>
@@ -439,4 +439,5 @@
     </script>
   </body>
 </html>
+
 
